[package]
name = "stegos"
version = "0.2.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "database-implementations", "command-line-utilities"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
repository = "https://github.com/stegos/stegos"
description = "Stegos is a completely private, confidential, and scalable cryptocurrency that's friendly to the environment"

[workspace]
members = [
    "api",
    "blockchain",
    "consensus",
    "crypto",
    "keychain",
    "network",
    "node",
    "serialization",
    "wallet",
    "network/stubs/libp2p",
    "crypto/stubs/vdf_field",
]

[dependencies]
stegos_api = { version = "0.2.0", path = "./api" }
stegos_blockchain = { version = "0.2.0", path = "./blockchain" }
stegos_consensus = { version = "0.2.0", path = "./consensus" }
stegos_crypto = { version = "0.2.0", path = "./crypto" }
stegos_keychain = { version = "0.2.0", path = "./keychain" }
stegos_network = { version = "0.4.0", path = "./network" }
stegos_node = { version = "0.2.0", path = "./node" }
stegos_serialization = { version = "0.2.0", path = "./serialization" }
stegos_wallet = { version = "0.2.0", path = "./wallet" }
assert_matches = "1.3.0"
bitvector = "0.1"
clap = "2.32"
dirs = "2.0"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.1"
log = "0.4"
log4rs = { version = "0.8", features = ["all_components", "gzip", "file", "toml_format"] }
prometheus = "0.7"
protobuf = "2.6"
rand = "0.7.0"
regex = "1.1"
resolve = "0.2"
rustyline = "4.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
simple_logger = "1.2"
tokio = { version = "0.1", default-features = false, features = []}
tokio-timer = "0.2"
toml = "0.5"
humantime = "1.2.0"
tempdir = "0.3"
rpassword = "3.0"
libc = "0.2"

[build-dependencies]
regex = "1.0"
chrono = "0.4"

[profile.release]
panic = "abort"
debug = 2

[profile.dev]
opt-level = 2
panic = "abort"
debug = 2
debug-assertions = true
overflow-checks = false

[profile.test]
opt-level = 2
debug = 2
debug-assertions = true
overflow-checks = false
