[package]
name = "stegos"
version = "0.13.0-pre"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "database-implementations", "command-line-utilities"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
repository = "https://github.com/stegos/stegos"
description = "Stegos is a completely private, confidential, and scalable cryptocurrency that's friendly to the environment"

[lib]
name = "stegos"
crate-type = ["cdylib"]

[workspace]
members = [
    "api",
    "blockchain",
    "consensus",
    "crypto",
    "keychain",
    # "network",
    "network_async",
    "node",
    "txpool",
    "replication",
    "serialization",
    "wallet",
    "crypto/stubs/vdf_field",
]

[dependencies]
# stegos_api = { version = "1.0.0", path = "./api" }
stegos_blockchain = { version = "1.0.0", path = "./blockchain" }
stegos_consensus = { version = "1.0.0", path = "./consensus" }
stegos_crypto = { version = "1.0.0", path = "./crypto" }
stegos_keychain = { version = "1.0.0", path = "./keychain" }
stegos_network = { version = "1.0.0", path = "./network_async", package="stegos_network_async"}
stegos_replication = { version = "1.0.0", path = "./replication" }
stegos_node = { version = "1.0.0", path = "./node" }
stegos_serialization = { version = "1.0.0", path = "./serialization" }
# stegos_wallet = { version = "1.0.0", path = "./wallet" }
stegos_txpool = { version = "1.0.0", path = "./txpool" }
assert_matches = "1.3.0"
bit-vec = "0.6"
clap = "2.32"
dirs = "2.0"
failure = "0.1"
futures = "0.3"
hyper = "0.12"
lazy_static = "1.1"
log = "0.4"
log4rs = { version = "0.8", features = ["all_components", "gzip", "file", "toml_format"] }
prometheus = "0.7"
protobuf = "2.6"
rand = "0.7.0"
regex = "1.1"
rustyline = "4.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
simple_logger = "1.2"
tokio =  {version="0.2.13", features =["time", "rt-threaded", "macros"]}
toml = "0.5"
humantime = "1.2.0"
tempdir = "0.3"
rpassword = "4.0"
libc = "0.2"
atty = "0.2"
serde_json = "1.0"
jni = "0.14.0"
backtrace = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"


[build-dependencies]
failure = "0.1"
regex = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"

[profile.release]
panic = "abort"
debug = 2

[profile.dev]
opt-level = 2
panic = "abort"
debug = 2
debug-assertions = true
overflow-checks = false

[profile.test]
opt-level = 2
debug = 2
debug-assertions = true
overflow-checks = false

[patch.crates-io]
cc = { git = 'https://github.com/stegos/cc-rs.git' }
# quicksink = {git="https://github.com/twittner/quicksink", rev="80e5bc9f928482793f0ade81094deae85c6024e4"}
libp2p={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-core ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-core-derive ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-tcp ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-dns ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-secio ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-mplex ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-yamux ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}
libp2p-swarm ={git="https://github.com/twittner/rust-libp2p", rev="5732d3650c4a77ab893dc8cb336209ace937a306"}