[package]
name = "stegos_api"
version = "1.0.0"
authors = ["Stegos AG <info@stegos.com>"]
categories = ["web-programming::http-server", "web-programming::websocket"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
repository = "https://github.com/stegos/stegos"
description = "Stegos - WebSocket API"

[dependencies]
base64 = "0.10"
failure = "0.1"
futures = "0.1"
log = "0.4"
rand = "0.7.0"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stegos_crypto = { version = "1.0.0", path = "../crypto" }
stegos_network = { version = "1.0.0", path = "../network" }
stegos_node = { version = "1.0.0", path = "../node" }
stegos_wallet = { version = "1.0.0", path = "../wallet" }
tokio = { version = "0.1", default-features = false, features = []}
tokio-timer = "0.2"
websocket = { version = "0.22", default-features = false, features = ["async"] }

[dev-dependencies]
lipsum = "0.6"
