[package]
name = "stegos_blockchain"
version = "0.2.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "database-implementations", "data-structures"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_blockchain"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Blockchain Library"

[dependencies]
stegos_crypto = { version = "0.2.0", path = "../crypto" }
stegos_keychain = { version = "0.2.0", path = "../keychain" }
stegos_serialization = { version = "0.2.0", path = "../serialization" }
bitvector = "0.1"
byteorder = "1.3"
failure = "0.1"
lazy_static = "1.2"
log = "0.4"
prometheus = "0.6"
protobuf = "2.6"
rand = "0.6"
rayon = "1.0"
rocksdb = "0.11"
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3"

[dev-dependencies]
simple_logger = "1.2"
rand_isaac = "0.1.1"

[build-dependencies]
stegos_serialization = { version = "0.2.0", path = "../serialization" }
