[package]
name = "stegos_blockchain"
version = "1.0.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "database-implementations", "data-structures"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_blockchain"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Blockchain Library"
autobenches = true

[dependencies]
stegos_crypto = { version = "1.0.0", path = "../crypto" }
stegos_serialization = { version = "1.0.0", path = "../serialization" }
bit-vec = "0.6"
byteorder = "1.3"
failure = "0.1"
chrono = "0.4"
lazy_static = "1.2"
log = "0.4"
prometheus = "0.7"
protobuf = "2.6"
rand = "0.7.0"
rand_core = "0.5"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3"
hex = "0.3.2"
rocksdb = { version = "0.13", default-features = false, features = [ "zstd","snappy", "lz4"] }

[dev-dependencies]
serde_json = "1.0"
simple_logger = "1.2"
criterion = "0.2"
serde_derive = "1.0"
serde_test = "1.0"
assert_matches = "1.3"

[build-dependencies]
stegos_serialization = { version = "1.0.0", path = "../serialization" }


[[bench]]
name = "block"
harness = false
