[package]
name = "stegos_consensus"
version = "0.1.0"
authors = ["Stegos AG <info@stegos.com>"]
edition = "2018"
links = "stegos_consensus"
build = "build.rs"

[dependencies]
log = "0.4"
failure = "0.1"
stegos_crypto = { path = "../crypto" }
stegos_serialization = {path = "../serialization"}
stegos_blockchain = { path = "../blockchain" }
bitvector = "0.1"
protobuf = "2.2"

[dev-dependencies]
stegos_keychain = { path = "../keychain" }
simple_logger = "1.0"
chrono = "0.4"
rand = "0.6"

[build-dependencies]
stegos_serialization = {path = "../serialization"}