[package]
name = "stegos_crypto"
version = "0.2.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_crypto"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Crypto Library"

[dependencies]
stegos_serialization = { version = "0.2.0", path = "../serialization" }
base58check = "0.0.1"
bitvector = "0.1"
failure = "0.1"
hex = "0.3"
lazy_static = "1.1"
log = "0.4"
protobuf = "2.6"
rand = "0.6"
old_rand = { package = "rand", version = "0.4" }
rayon = "1.0"
rust-crypto = "0.2"
sha3 = "0.8"
clear_on_drop = "0.2"
serde = "1.0"
paired = "0.15"
ff = "0.4"
curve25519-dalek = "1"
merlin = "1"
ristretto_bulletproofs = { package = "bulletproofs", version = "1" }
vdf = "0.1"

[dev-dependencies]
serde_json = "1.0"
simple_logger = "1.2"
criterion = "0.2"

[build-dependencies]
stegos_serialization = { version = "0.2.0", path = "../serialization" }
cc = "1.0"

[[bench]]
name = "bulletproofs"
harness = false

[[bench]]
name = "scc"
harness = false

[[bench]]
name = "pbc"
harness = false

