[package]
name = "stegos_network"
version = "0.4.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_network"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Network Library"

[dependencies]
stegos_crypto = { version = "0.2.0", path = "../crypto" }
stegos_keychain = { version = "0.2.0", path = "../keychain" }
stegos_serialization = { version = "0.2.0", path = "../serialization" }
arrayvec = "0.4"
bigint = "4.4"
bs58 = "0.2"
bytes = "0.4"
cuckoofilter = "0.3"
env_logger = "0.6"
failure = "0.1"
fnv = "1.0"
futures = "0.1"
ipnetwork = "0.14"
lazy_static = "1.3"
libp2p = { version = "0.5", default-features = false, features = ["secio-secp256k1"] }
log = "0.4"
lru_time_cache = "0.9"
pnet = "0.22.0"
prometheus = "0.5"
protobuf = "2.4"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
smallvec = "0.6"
tokio = "0.1"
tokio-codec = "0.1"
tokio-stdin-stdout = "0.1"
tokio-timer = "0.2"
unsigned-varint = "0.2"
void = "1.0"

[build-dependencies]
stegos_serialization = { version = "0.2.0", path = "../serialization" }
