[package]
name = "stegos_network"
version = "1.0.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_network"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Network Library"

[dependencies]
stegos_crypto = { version = "1.0.0", path = "../crypto" }
stegos_serialization = { version = "1.0.0", path = "../serialization" }
arrayvec = "0.4"
bigint = "4.4"
bs58 = "0.2"
bytes = { version = "0.4", features = ["serde"] }
byteorder = "1.3.2"
cuckoofilter = "0.3"
env_logger = "0.6"
failure = "0.1"
fnv = "1.0"
futures = "0.1"
lazy_static = "1.3"
libp2p = { path = "stubs/libp2p" }
libp2p-core = { version = "0.13", default-features = false}
libp2p-core-derive = "0.13"
libp2p-tcp = "0.13"
libp2p-dns = "0.13"
libp2p-secio = "0.13"
libp2p-mplex = "0.13"
libp2p-swarm = "0.3"
log = "0.4"
lru_time_cache = "0.9"
num_cpus = "1.10"
parity-multihash = "0.2"
prometheus = "0.7"
protobuf = "2.6"
rand = "0.7.0"
trust-dns-resolver = "0.18.0"
serde = "1.0"
serde_derive = "1.0"
smallvec = "0.6"
tokio = { version = "0.1", default-features = false, features = ["codec"]}
tokio-timer = "0.2"
tokio-io = "0.1"
unsigned-varint = { version = "0.2", features = ["codec"]}
update_rate = "2.0"
void = "1.0"

[build-dependencies]
stegos_serialization = { version = "1.0.0", path = "../serialization" }
