[package]
name = "stegos_network"
version = "1.0.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_network"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Network Library"

[dependencies]
stegos_crypto = { version = "1.0.0", path = "../crypto" }
stegos_serialization = { version = "1.0.0", path = "../serialization" }
arrayvec = "0.4"
bigint = "4.4"
# bs58 = "0.2"
byteorder = "1.3.2"
bytes = { version = "0.5.4", features = ["serde"] }
cuckoofilter = "0.3"
env_logger = "0.7"
failure = "0.1"
fnv = "1.0"
futures = "0.3.4"
lazy_static = "1.4"
libp2p = { version = "0.18", default-features = false, features=["gossipsub", "tcp"]}
libp2p-tcp = { version = "0.18", default-features = false, features=["async-std"]}
libp2p-core = { version = "0.18", default-features = false}
libp2p-core-derive = "0.18"
libp2p-dns = "0.18"
libp2p-secio = "0.18"
libp2p-mplex = "0.18"
libp2p-yamux = "0.18"
yamux = "0.4.5"
libp2p-swarm = "0.18"
trust-dns-resolver = "0.19.3"
log = "0.4"
smallvec = "0.6"
protobuf = "2.6"
tokio = { version = "0.2"}
lru_time_cache = "0.9"
num_cpus = "1.10"
parity-multihash = "0.2"
prometheus = "0.7"
rand = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
futures_codec = "0.3"
futures-io = "0.3"
unsigned-varint = { version = "0.3.2", features = ["futures-codec"]}
update_rate = "2.0"
void = "1.0"
derivative="2.1.1"

[dev-dependencies]
async-std = "1.5"

[build-dependencies]
stegos_serialization = { version = "1.0.0", path = "../serialization" }

[features]
default=["old_protos"]
old_protos=[]