[package]
name = "stegos_node"
version = "0.1.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_node"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Blockchain Node"

[dependencies]
stegos_blockchain = { version = "0.1.0", path = "../blockchain" }
stegos_consensus = { version = "0.1.0", path = "../consensus" }
stegos_crypto = { version = "0.1.0", path = "../crypto" }
stegos_keychain = { version = "0.1.0", path = "../keychain" }
stegos_network = { version = "0.3.0", path = "../network" }
stegos_serialization = { version = "0.1.0", path = "../serialization" }
bitvector = "0.1"
chrono = "0.4"
clap = "2.32"
failure = "0.1"
futures = "0.1"
futures-stream-select-all-send = "0.1"
lazy_static = "1.1"
linked-hash-map = "0.5"
log = "0.4"
protobuf = "2.2"
rand = "0.6"
rand_isaac = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
simple_logger = "1.0"
tokio-timer = "0.2"

[dev-dependencies]
assert_matches = "1.3.0"
tokio-executor = "0.1.6"

[build-dependencies]
stegos_serialization = { version = "0.1.0", path = "../serialization" }

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"
