[package]
name = "stegos_randhound"
version = "0.1.0"
authors = ["Stegos AG <info@stegos.cc>"]
edition = "2018"

[dependencies]
stegos_config = { path = "../config" }
stegos_crypto = { path = "../crypto" }
stegos_keychain = { path = "../keychain" }
stegos_network = { path = "../network" }
failure = "0.1"
futures = "0.1"
futures-stream-select-all-send = "0.1"
hex = "0.3"
lazy_static = "1.1"
log = "0.4"
protobuf = "2.2"
rand = "0.6"
state = "0.4"
tokio = "0.1"
tokio-timer = "0.2"
tokio-threadpool = "0.1"

[dev-dependencies]
simple_logger = "1.0"

[build-dependencies]
# protoc-rust = "2.1"
protobuf-codegen-pure = "2.2"
