[package]
name = "stegos_txpool"
version = "0.1.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
stegos_crypto = { path = "../crypto" }
stegos_keychain = { path = "../keychain" }
stegos_serialization = {path = "../serialization"}
stegos_node = {path = "../node"}
tokio-timer = "0.2"
futures = "0.1"
failure = "0.1"
log = "0.4"
stegos_network = { path = "../network" }
futures-stream-select-all-send = "0.1"

protobuf = "2.2"

[build-dependencies]
stegos_serialization = {path = "../serialization"}