[package]
name = "stegos_txpool"
version = "0.2.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Transaction Pool Facilitator"

[dependencies]
stegos_blockchain = { version = "0.2.0", path = "../blockchain" }
stegos_crypto = { version = "0.2.0", path = "../crypto" }
stegos_network = { version = "0.4.0", path = "../network" }
stegos_node = { version = "0.2.0", path = "../node" }
stegos_serialization = { version = "0.2.0", path = "../serialization" }
failure = "0.1"
futures = "0.1"
futures-stream-select-all-send = "0.1"
log = "0.4"
protobuf = "2.6"
tokio-timer = "0.2"

[build-dependencies]
stegos_serialization = { version = "0.2.0", path = "../serialization" }
