[package]
name = "stegos_txpool"
version = "1.0.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_txpool"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Facilitator"

[dependencies]
stegos_crypto = { version = "1.0.0", path = "../crypto" }
stegos_blockchain = { version = "1.0.0", path = "../blockchain" }
stegos_network = { version = "1.0.0", path = "../network"}
stegos_serialization = { version = "1.0.0", path = "../serialization" }
log = "0.4"
failure = "0.1"
futures = "0.3"
protobuf = "2.6"
rand = "0.7.0"
rand_core = "0.5"
serde = "1.0"
serde_derive = "1.0"
simple_logger = "1.2"
tokio = {version="0.2.13", features=["time", "stream"]}

[build-dependencies]
stegos_serialization = { version = "1.0.0", path = "../serialization" }
