[package]
name = "stegos_wallet"
version = "1.0.0"
authors = ["Stegos AG <info@stegos.com>"]
build = "build.rs"
categories = ["cryptography", "network-programming"]
edition = "2018"
homepage = "https://stegos.com"
keywords = ["stegos", "blockchain", "cryptocurrency", "crypto", "privacy"]
license = "MIT"
links = "stegos_wallet"
repository = "https://github.com/stegos/stegos"
description = "Stegos - Wallet"

[dependencies]
stegos_blockchain = { version = "1.0.0", path = "../blockchain" }
stegos_crypto = { version = "1.0.0", path = "../crypto" }
stegos_keychain = { version = "1.0.0", path = "../keychain" }
stegos_network = { version = "1.0.0", path = "../network"}
stegos_txpool = { version = "1.0.0", path = "../txpool" }
stegos_replication = { version = "1.0.0", path = "../replication" }
stegos_serialization = { version = "1.0.0", path = "../serialization" }
bit-vec = "0.6"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
futures = "0.3"
futures-stream-select-all-send = "0.1"
log = "0.4"
protobuf = "2.6"
rand = "0.7.0"
lazy_static = "1.2"
prometheus = "0.7"
humantime = "1.2.0"
byteorder = "1.3"
tempdir = "0.3"
assert_matches = "1.3.0"
tokio = { version = "0.2", features=["blocking"]}
rocksdb = { version = "0.13", default-features = false, features = [ "zstd","snappy", "lz4"] }

[dev-dependencies]
simple_logger = "1.0"
serde_json = "1.0"
pretty_assertions = "0.6.1"

[build-dependencies]
stegos_serialization = { version = "1.0.0", path = "../serialization" }
